Update header title to 'MuGöl Hava Durumu'

--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                 <div class="logo">
                     <img src="logo.png"alt="MuGöl Hava Durumu">
                   </div>
-                <div class="header-title">MuGöl Hava</div>
+                <div class="header-title">MuGöl Hava Durumu</div>
             </div>
             <div class="header-actions">
                 <div class="location-btn" id="notificationBtn" style="cursor: pointer;" title="Bildirimleri Aç">🔔</div>
